// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> should render About page nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute is-bold"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 290 180"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 37.143495,2.499996 H 158.81128 L 152.1301,36.609173 H 75.58958 L 69.26004,69.19457 h 72.08641 l -6.7984,34.10918 H 62.57886 L 48.16158,177.5 H 3.0343185 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 232.8253,145.61788 H 162.96596 L 145.61834,177.5 H 99.31894 L 198.24727,2.499996 h 51.57402 L 280.76569,177.5 h -42.9002 z m -52.86336,-31.7649 h 47.00268 L 216.41539,46.455121 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 201.26761,104 A 50.387058,50 0 0 1 150.88055,154 50.387058,50 0 0 1 100.4935,104 50.387058,50 0 0 1 150.88055,53.999997 50.387058,50 0 0 1 201.26761,104 Z"
            fill="#2e8b57"
          />
          <path
            d="m 131.63097,76.79366 h 15.67708 l 12.46875,37.69792 7.32813,-37.69792 h 13.27083 l -10.60937,54.43229 H 154.0893 l -12.46875,-37.69791 -7.29166,37.69791 H 121.0216 Z"
            fill="#fff"
            stroke="#fff"
            strokeWidth="5"
          />
        </svg>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          aria-current={null}
          className="navbar-item"
          href="/projects"
          onClick={[Function]}
        >
          Projects
        </a>
        <a
          aria-current="page"
          className="navbar-item is-active"
          href="/about"
          onClick={[Function]}
          style={Object {}}
        >
          About
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/support"
          onClick={[Function]}
        >
          Support
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Cookie Policy page nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute is-bold"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 290 180"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 37.143495,2.499996 H 158.81128 L 152.1301,36.609173 H 75.58958 L 69.26004,69.19457 h 72.08641 l -6.7984,34.10918 H 62.57886 L 48.16158,177.5 H 3.0343185 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 232.8253,145.61788 H 162.96596 L 145.61834,177.5 H 99.31894 L 198.24727,2.499996 h 51.57402 L 280.76569,177.5 h -42.9002 z m -52.86336,-31.7649 h 47.00268 L 216.41539,46.455121 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 201.26761,104 A 50.387058,50 0 0 1 150.88055,154 50.387058,50 0 0 1 100.4935,104 50.387058,50 0 0 1 150.88055,53.999997 50.387058,50 0 0 1 201.26761,104 Z"
            fill="#2e8b57"
          />
          <path
            d="m 131.63097,76.79366 h 15.67708 l 12.46875,37.69792 7.32813,-37.69792 h 13.27083 l -10.60937,54.43229 H 154.0893 l -12.46875,-37.69791 -7.29166,37.69791 H 121.0216 Z"
            fill="#fff"
            stroke="#fff"
            strokeWidth="5"
          />
        </svg>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          aria-current={null}
          className="navbar-item"
          href="/projects"
          onClick={[Function]}
        >
          Projects
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/about"
          onClick={[Function]}
        >
          About
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/support"
          onClick={[Function]}
        >
          Support
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Privacy Policy page nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute is-bold"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 290 180"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 37.143495,2.499996 H 158.81128 L 152.1301,36.609173 H 75.58958 L 69.26004,69.19457 h 72.08641 l -6.7984,34.10918 H 62.57886 L 48.16158,177.5 H 3.0343185 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 232.8253,145.61788 H 162.96596 L 145.61834,177.5 H 99.31894 L 198.24727,2.499996 h 51.57402 L 280.76569,177.5 h -42.9002 z m -52.86336,-31.7649 h 47.00268 L 216.41539,46.455121 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 201.26761,104 A 50.387058,50 0 0 1 150.88055,154 50.387058,50 0 0 1 100.4935,104 50.387058,50 0 0 1 150.88055,53.999997 50.387058,50 0 0 1 201.26761,104 Z"
            fill="#2e8b57"
          />
          <path
            d="m 131.63097,76.79366 h 15.67708 l 12.46875,37.69792 7.32813,-37.69792 h 13.27083 l -10.60937,54.43229 H 154.0893 l -12.46875,-37.69791 -7.29166,37.69791 H 121.0216 Z"
            fill="#fff"
            stroke="#fff"
            strokeWidth="5"
          />
        </svg>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          aria-current={null}
          className="navbar-item"
          href="/projects"
          onClick={[Function]}
        >
          Projects
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/about"
          onClick={[Function]}
        >
          About
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/support"
          onClick={[Function]}
        >
          Support
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Projects page nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute is-bold"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 290 180"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 37.143495,2.499996 H 158.81128 L 152.1301,36.609173 H 75.58958 L 69.26004,69.19457 h 72.08641 l -6.7984,34.10918 H 62.57886 L 48.16158,177.5 H 3.0343185 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 232.8253,145.61788 H 162.96596 L 145.61834,177.5 H 99.31894 L 198.24727,2.499996 h 51.57402 L 280.76569,177.5 h -42.9002 z m -52.86336,-31.7649 h 47.00268 L 216.41539,46.455121 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 201.26761,104 A 50.387058,50 0 0 1 150.88055,154 50.387058,50 0 0 1 100.4935,104 50.387058,50 0 0 1 150.88055,53.999997 50.387058,50 0 0 1 201.26761,104 Z"
            fill="#2e8b57"
          />
          <path
            d="m 131.63097,76.79366 h 15.67708 l 12.46875,37.69792 7.32813,-37.69792 h 13.27083 l -10.60937,54.43229 H 154.0893 l -12.46875,-37.69791 -7.29166,37.69791 H 121.0216 Z"
            fill="#fff"
            stroke="#fff"
            strokeWidth="5"
          />
        </svg>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          aria-current="page"
          className="navbar-item is-active"
          href="/projects"
          onClick={[Function]}
          style={Object {}}
        >
          Projects
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/about"
          onClick={[Function]}
        >
          About
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/support"
          onClick={[Function]}
        >
          Support
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Support page nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute is-bold"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 290 180"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 37.143495,2.499996 H 158.81128 L 152.1301,36.609173 H 75.58958 L 69.26004,69.19457 h 72.08641 l -6.7984,34.10918 H 62.57886 L 48.16158,177.5 H 3.0343185 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 232.8253,145.61788 H 162.96596 L 145.61834,177.5 H 99.31894 L 198.24727,2.499996 h 51.57402 L 280.76569,177.5 h -42.9002 z m -52.86336,-31.7649 h 47.00268 L 216.41539,46.455121 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 201.26761,104 A 50.387058,50 0 0 1 150.88055,154 50.387058,50 0 0 1 100.4935,104 50.387058,50 0 0 1 150.88055,53.999997 50.387058,50 0 0 1 201.26761,104 Z"
            fill="#2e8b57"
          />
          <path
            d="m 131.63097,76.79366 h 15.67708 l 12.46875,37.69792 7.32813,-37.69792 h 13.27083 l -10.60937,54.43229 H 154.0893 l -12.46875,-37.69791 -7.29166,37.69791 H 121.0216 Z"
            fill="#fff"
            stroke="#fff"
            strokeWidth="5"
          />
        </svg>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          aria-current={null}
          className="navbar-item"
          href="/projects"
          onClick={[Function]}
        >
          Projects
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/about"
          onClick={[Function]}
        >
          About
        </a>
        <a
          aria-current="page"
          className="navbar-item is-active"
          href="/support"
          onClick={[Function]}
          style={Object {}}
        >
          Support
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render homepage nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute is-bold"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 290 180"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 37.143495,2.499996 H 158.81128 L 152.1301,36.609173 H 75.58958 L 69.26004,69.19457 h 72.08641 l -6.7984,34.10918 H 62.57886 L 48.16158,177.5 H 3.0343185 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 232.8253,145.61788 H 162.96596 L 145.61834,177.5 H 99.31894 L 198.24727,2.499996 h 51.57402 L 280.76569,177.5 h -42.9002 z m -52.86336,-31.7649 h 47.00268 L 216.41539,46.455121 Z"
            fill="#00008b"
            stroke="#00008b"
            strokeWidth="5"
          />
          <path
            d="M 201.26761,104 A 50.387058,50 0 0 1 150.88055,154 50.387058,50 0 0 1 100.4935,104 50.387058,50 0 0 1 150.88055,53.999997 50.387058,50 0 0 1 201.26761,104 Z"
            fill="#2e8b57"
          />
          <path
            d="m 131.63097,76.79366 h 15.67708 l 12.46875,37.69792 7.32813,-37.69792 h 13.27083 l -10.60937,54.43229 H 154.0893 l -12.46875,-37.69791 -7.29166,37.69791 H 121.0216 Z"
            fill="#fff"
            stroke="#fff"
            strokeWidth="5"
          />
        </svg>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          aria-current={null}
          className="navbar-item"
          href="/projects"
          onClick={[Function]}
        >
          Projects
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/about"
          onClick={[Function]}
        >
          About
        </a>
        <a
          aria-current={null}
          className="navbar-item"
          href="/support"
          onClick={[Function]}
        >
          Support
        </a>
      </div>
    </div>
  </div>
</nav>
`;
